crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__expression_strings_are_not_folded.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{\"  A\\n B  \"}</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 16,
                                    },
                                },
                                value: Str(
                                    "  A\n B  ",
                                ),
                            },
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
