crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__fragment_empty.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<></>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Markup(
        Fragment(
            [],
        ),
    ),
}
