crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__hole_string_literal_at.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{\"@\"}</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 8,
                                    },
                                },
                                value: Str(
                                    "@",
                                ),
                            },
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
