crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__hole_with_spaces.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{ a + b }</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 13,
                            },
                        },
                        value: Hole(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 11,
                                    },
                                },
                                value: BinOps {
                                    operands: [
                                        BinOpOperand {
                                            expr: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 6,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 7,
                                                    },
                                                },
                                                value: Var(
                                                    "a",
                                                ),
                                            },
                                            op: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 8,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 9,
                                                    },
                                                },
                                                value: Add,
                                            },
                                        },
                                    ],
                                    last: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                        },
                                        value: Var(
                                            "b",
                                        ),
                                    },
                                },
                            },
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
